gccida/c0/dw2_asm_output_nstring
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/dwarf2asm.c:727:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)c] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/dwarf2asm.c:762:12: error: use of undeclared identifier 'byte_7F6018'
escape_0 = byte_7F6018[*_ascii_bytes]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/dwarf2asm.c:763:6: error: use of undeclared identifier 'byte_7F6018'
if ( byte_7F6018[*_ascii_bytes] ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/dwarf2asm.c:794:10: error: use of undeclared identifier 'byte_7F6018'
escape = byte_7F6018[*_limited_str]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/dwarf2asm.c:795:6: error: use of undeclared identifier 'byte_7F6018'
if ( byte_7F6018[*_limited_str] ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_asm_output_nstring/src/obj/dwarf2asm.o] Error 1
